[package]
name = "sozuconfw"
description = "Command line application to autoconfigure routing"
repository = "https://github.com/sozu-proxy/sozuconfw"
readme = "README.md"
documentation = "https://docs.rs/sozuconfw"
homepage = "http://sozu.io"
version = "0.1.0"
license = "AGPL-3.0"
categories = ["network-programming"]

[dependencies]
clap = "^2.19.0"
notify = "^4.0.0"
serde = "^1.0.0"
serde_derive = "^1.0.0"
ansi_term = "^0.9"
error-chain = "0.10.0"
rand = "0.3.16"
mio-uds = "^0.6"
sozu-command-lib = { git = "https://github.com/sozu-proxy/sozu" }

[dependencies.toml]
version = "^0.4"
default-features = false
features = ["serde"]